added: Extract angular translations Angular add lib Npm install(--legacy-peer-deps) sort maven plugin running before build project